# kronor-haskell-packages

./: 01-index.tar  flake.nix  mirrors.json  root.json  snapshot.json  timestamp.json
.github/workflows/: CI.yml
all-package-versions/: index.html
all-packages/: index.html
index/Spock-core/0.14.0.1.0.0.0.0.1/: Spock-core.cabal  package.json
index/ekg-statsd/0.2.5.0.0.0.0.0.1/: ekg-statsd.cabal  package.json
index/fastsum/0.2.0.0.0.0.0.0.1/: fastsum.cabal  package.json
index/fix-core-gen/0.0.0.0.0.0.0.0.0.0.0.0.1/: fix-core-gen.cabal  package.json
index/fix-core/0.0.0.0.0.0.0.0.0.0.0.0.1/: fix-core.cabal  package.json
index/fix-spec-gen/0.0.0.0.0.0.0.0.0.0.0.0.1/: fix-spec-gen.cabal  package.json
index/hasql-optparse-applicative/0.3.0.8.0.0.0.0.1/: hasql-optparse-applicative.cabal  package.json
index/hasql-pool/0.10.0.1.0.0.0.0.1/: hasql-pool.cabal  package.json
index/hasql-pool/0.6.0.0.0.0.0.1/: hasql-pool.cabal  package.json
index/hasql-pool/1.3.0.3.0.0.0.0.1/: hasql-pool.cabal  package.json
index/hasql-th/0.4.0.23.0.0.0.0.1/: hasql-th.cabal  package.json
index/hasql-transaction/1.0.1.2.0.0.0.0.1/: hasql-transaction.cabal  package.json
index/hasql-transaction/1.2.1.0.0.0.0.1/: hasql-transaction.cabal  package.json
index/hasql/1.9.3.0.0.0.0.1/: hasql.cabal  package.json
index/hs-opentelemetry-api/0.2.0.0.0.0.0.0.1/: hs-opentelemetry-api.cabal  package.json
index/hs-opentelemetry-exporter-otlp/0.1.0.0.0.0.0.0.1/: hs-opentelemetry-exporter-otlp.cabal  package.json
index/hs-opentelemetry-otlp/0.1.0.0.0.0.0.0.1/: hs-opentelemetry-otlp.cabal  package.json
index/jwt/0.11.0.0.0.0.0.1/: jwt.cabal  package.json
index/language-javascript/0.7.1.0.0.0.0.0.1/: language-javascript.cabal  package.json
index/monad-metrics/0.2.2.0.0.0.0.0.1/: monad-metrics.cabal  package.json
index/morpheus-graphql-code-gen-utils/0.27.3.0.0.0.0.3/: morpheus-graphql-code-gen-utils.cabal  package.json
index/morpheus-graphql-code-gen/0.27.3.0.0.0.0.1/: morpheus-graphql-code-gen.cabal  package.json
index/morpheus-graphql-tests/0.27.3.0.0.0.0.1/: morpheus-graphql-tests.cabal  package.json
index/postgresql-syntax/0.4.1.3.0.0.0.0.1/: package.json  postgresql-syntax.cabal
index/readable/0.3.1.0.0.0.0.1/: package.json  readable.cabal
index/serversession-backend-persistent/1.0.5.0.0.0.0.1/: package.json  serversession-backend-persistent.cabal
index/serversession-frontend-yesod/1.0.0.0.0.0.1/: package.json  serversession-frontend-yesod.cabal
index/smtp-mail/0.3.0.0.0.0.0.0.1/: package.json  smtp-mail.cabal
index/statechart-sdk/1.0.0/: package.json  statechart-sdk.cabal
index/streamly-cassava/0.1.1.0.0.0.0.0.1/: package.json  streamly-cassava.cabal
package/Spock-core-0.14.0.1.0.0.0.0.1/: index.html
package/ekg-0.4.0.16.0.0.0.0.9/: index.html
package/ekg-json-0.1.0.7.0.0.0.0.1/: index.html
package/ekg-statsd-0.2.5.0.0.0.0.0.1/: index.html
package/fastsum-0.2.0.0.0.0.0.0.1/: index.html
package/fix-app-0.0.0.0/: index.html
package/fix-codegen-0.0.0.0/: index.html
package/fix-core-0.0.0.0/: index.html
package/fix-core-0.0.0.0.0.0.0.0.0.0.0.0.1/: index.html
package/fix-core-gen-0.0.0.0/: index.html
package/fix-core-gen-0.0.0.0.0.0.0.0.0.0.0.0.1/: index.html
package/fix-spec-0.0.0.0/: index.html
package/fix-spec-0.0.0.0.0.0.0.0.0.0.0.0.1/: index.html
package/fix-spec-gen-0.0.0.0/: index.html
package/fix-spec-gen-0.0.0.0.0.0.0.0.0.0.0.0.1/: index.html
package/hasql-1.9.3.0.0.0.0.1/: index.html
package/hasql-optparse-applicative-0.3.0.8.0.0.0.0.1/: index.html
package/hasql-pool-0.10.0.1.0.0.0.0.1/: index.html
package/hasql-pool-0.10.0.1.0.0.0.0.2/: index.html
package/hasql-pool-0.6.0.0.0.0.0.1/: index.html
package/hasql-pool-1.3.0.3.0.0.0.0.1/: index.html
package/hasql-th-0.4.0.17.0.0.0.0.1/: index.html
package/hasql-th-0.4.0.17.0.0.0.0.2/: index.html
package/hasql-th-0.4.0.23.0.0.0.0.1/: index.html
package/hasql-transaction-1.0.1.1.0.0.0.0.1/: index.html
package/hasql-transaction-1.0.1.2.0.0.0.0.1/: index.html
package/hasql-transaction-1.2.1.0.0.0.0.1/: index.html
package/hs-opentelemetry-api-0.2.0.0.0.0.0.0.1/: index.html
package/hs-opentelemetry-exporter-otlp-0.1.0.0.0.0.0.0.1/: index.html
package/hs-opentelemetry-otlp-0.1.0.0.0.0.0.0.1/: index.html
package/jwt-0.11.0.0.0.0.0.1/: index.html
package/language-javascript-0.7.1.0.0.0.0.0.1/: index.html
package/monad-metrics-0.2.2.0.0.0.0.0.1/: index.html
package/morpheus-graphql-0.20.0.0.0.0.0.1/: index.html
package/morpheus-graphql-0.27.3.0.0.0.0.1/: index.html
package/morpheus-graphql-0.27.3.0.0.0.0.3/: index.html
package/morpheus-graphql-app-0.20.0.0.0.0.0.1/: index.html
package/morpheus-graphql-app-0.27.3.0.0.0.0.1/: index.html
package/morpheus-graphql-app-0.27.3.0.0.0.0.3/: index.html
package/morpheus-graphql-client-0.20.0.0.0.0.0.1/: index.html
package/morpheus-graphql-client-0.27.3.0.0.0.0.1/: index.html
package/morpheus-graphql-client-0.27.3.0.0.0.0.3/: index.html
package/morpheus-graphql-code-gen-0.20.0.0.0.0.0.1/: index.html
package/morpheus-graphql-code-gen-0.27.3.0.0.0.0.1/: index.html
package/morpheus-graphql-code-gen-0.27.3.0.0.0.0.2/: index.html
package/morpheus-graphql-code-gen-0.27.3.0.0.0.0.3/: index.html
package/morpheus-graphql-code-gen-utils-0.27.3.0.0.0.0.3/: index.html
package/morpheus-graphql-core-0.20.0.0.0.0.0.1/: index.html
package/morpheus-graphql-core-0.27.3.0.0.0.0.1/: index.html
package/morpheus-graphql-server-0.27.3.0.0.0.0.3/: index.html
package/morpheus-graphql-subscriptions-0.20.0.0.0.0.0.1/: index.html
package/morpheus-graphql-subscriptions-0.27.3.0.0.0.0.1/: index.html
package/morpheus-graphql-tests-0.20.0.0.0.0.0.1/: index.html
package/morpheus-graphql-tests-0.27.3.0.0.0.0.1/: index.html
package/postgresql-syntax-0.4.1.0.0.0.0.1/: index.html
package/postgresql-syntax-0.4.1.0.0.0.0.2/: index.html
package/postgresql-syntax-0.4.1.3.0.0.0.0.1/: index.html
package/readable-0.3.1.0.0.0.0.1/: index.html
package/serversession-backend-persistent-1.0.5.0.0.0.0.1/: index.html
(+189 files in other folders)
