cabal-version:      2.0
name:               Spock-core
version:            0.14.0.1.0.0.0.0.1
license:            BSD3
license-file:       LICENSE
copyright:          (c) 2013 - 2021 Alexander Thiemann
maintainer:         Alexander Thiemann <mail@athiemann.net>
author:             Alexander Thiemann <mail@athiemann.net>
tested-with:        ghc ==8.8.4 ghc ==9.2.2
homepage:           https://www.spock.li
bug-reports:        https://github.com/agrafix/Spock/issues
synopsis:           Another Haskell web framework for rapid development
description:        Barebones high performance type safe web framework
category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/agrafix/Spock

library
    exposed-modules:
        Web.Spock.Core
        Web.Spock.Action
        Web.Spock.Routing
        Web.Spock.Internal.Cookies
        Web.Spock.Internal.Util

    hs-source-dirs:   src
    other-modules:
        Web.Spock.Internal.Config
        Web.Spock.Internal.CoreAction
        Web.Spock.Internal.Wire

    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-orphans
    build-depends:
        aeson >=0.7,
        base >=4 && <5,
        base64-bytestring >=1.0,
        bytestring >=0.10,
        case-insensitive >=1.1,
        containers >=0.5,
        cookie >=0.4,
        hashable >=1.2,
        http-types >=0.8,
        hvect >=0.4,
        monad-control >=1.0,
        mmorph >=1.1,
        mtl >=2.1,
        http-api-data >=0.2,
        old-locale >=1.0,
        reroute >=0.5,
        resourcet >=1.2.2,
        stm >=2.4,
        superbuffer >=0.2,
        text >=0.11.3.1,
        time >=1.4,
        transformers >=0.3,
        transformers-base >=0.4,
        unordered-containers >=0.2,
        vault >=0.3,
        wai >=3.0,
        wai-extra >=3.0,
        warp >=3.0

test-suite spockcoretests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:
        Web.Spock.FrameworkSpecHelper
        Web.Spock.Internal.CookiesSpec
        Web.Spock.Internal.UtilSpec
        Web.Spock.SafeSpec

    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-orphans
    build-depends:
        aeson,
        base,
        bytestring,
        base64-bytestring >=1.0,
        hspec >=2.0,
        hspec-wai >=0.6,
        http-types,
        monad-control,
        Spock-core,
        reroute,
        text,
        time,
        transformers >=0.3,
        transformers-base,
        unordered-containers,
        wai
