cabal-version:      2.4
name:               fastsum
version:            0.2.0.0.0.0.0.0.1
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Rob Rix, Josh Vera, Allele Dev, Patrick Thomson 2016-2018
maintainer:         patrickt@github.com
author:             Rob Rix, Josh Vera, Allele Dev, Patrick Thomson
tested-with:
    ghc ==8.2.2 ghc ==8.4.3 ghc ==8.6.3 ghc ==8.8.1 ghc ==8.10.7
    ghc ==9.2.1

homepage:           https://github.com/patrickt/fastsum#readme
synopsis:
    A fast open-union type suitable for 100+ contained alternatives

description:
    This package provides Data.Sum, an open-union type, similar to the Union type
    that powers the implementation of Oleg Kiselyov's extensible-effects library.
    .
    Unlike most open-union implementations, this type is very fast to compile,
    even when the type-level list of alternatives contains hundreds of entries.
    Membership queries are constant-time, compiling to a single type-level natural
    lookup in a closed type family, unlike the traditional encoding of Union,
    which relies on recursive typeclass lookups. As such, this type lends itself
    to representing abstract syntax trees or other rich data structures.
    .
    This project is safe to use in production. Any performance problems at
    compile-time or runtime should be filed as bugs.

category:           Data
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/patrickt/fastsum

flag build-examples
    default: False

library
    exposed-modules:
        Data.Sum
        Data.Sum.Populate

    hs-source-dirs:   src
    other-modules:    Data.Sum.Templates
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        deepseq >=1.4 && <2,
        ghc-prim >=0.5 && <1,
        hashable >=1.2 && <2,
        template-haskell >=2.12 && <2.20

executable examples
    main-is:          Main.hs
    hs-source-dirs:   examples
    default-language: Haskell2010
    build-depends:
        base,
        fastsum

    if !flag(build-examples)
        buildable: False
