cabal-version: 1.12
name:          fix-spec-gen
version:       0.0.0.0.0.0.0.0.0.0.0.0.1
build-type:    Simple

library
    exposed-modules:
        FIX.Components.Gen
        FIX.Components.TestUtils
        FIX.Fields.Gen
        FIX.Groups.TestUtils
        FIX.Messages.Gen
        FIX.Messages.TestUtils

    hs-source-dirs:   src
    other-modules:    Paths_fix_spec_gen
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        bytestring,
        dlist,
        fix-core-gen,
        fix-spec,
        genvalidity,
        genvalidity-bytestring,
        genvalidity-sydtest,
        path,
        path-io,
        sydtest

test-suite fix-spec-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: sydtest-discover:sydtest-discover
    hs-source-dirs:     test/
    other-modules:
        FIX.AnyFieldSpec
        FIX.AnyMessageSpec
        FIX.ComponentsSpec
        FIX.FieldsSpec
        FIX.Messages.EnvelopeSpec
        FIX.MessagesSpec
        Paths_fix_spec_gen

    default-language:   Haskell2010
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base >=4.7 && <5,
        bytestring,
        fix-core-gen,
        fix-spec,
        fix-spec-gen,
        genvalidity-sydtest,
        megaparsec,
        sydtest
