cabal-version: >=1.10
name:          hasql-optparse-applicative
version:       0.3.0.8.0.0.0.0.1
license:       MIT
license-file:  LICENSE
copyright:     (c) 2016, Sannsyn AS
maintainer:    Nikita Volkov <nikita.y.volkov@mail.ru>
author:        Nikita Volkov <nikita.y.volkov@mail.ru>
homepage:      https://github.com/sannsyn/hasql-optparse-applicative 
bug-reports:
    https://github.com/sannsyn/hasql-optparse-applicative/issues 

synopsis:      "optparse-applicative" parsers for "hasql"
category:      Hasql, Database, PostgreSQL, Options
build-type:    Simple

source-repository head
    type:     git
    location: git://github.com/sannsyn/hasql-optparse-applicative.git

library
    exposed-modules:    Hasql.OptparseApplicative
    hs-source-dirs:     library
    default-language:   Haskell2010
    default-extensions:
        Arrows BangPatterns ConstraintKinds DataKinds DefaultSignatures
        DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric
        DeriveTraversable EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        PatternGuards ParallelListComp QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeFamilies TypeOperators
        UnboxedTuples

    build-depends:
        hasql >=1.3 && <1.6,
        hasql-pool >=0.6 && <0.7,
        optparse-applicative >=0.12 && <0.18,
        base-prelude <2
