cabal-version:      >=1.10
name:               hasql-pool
version:            0.6.0.0.0.0.0.1
license:            MIT
license-file:       LICENSE
copyright:          (c) 2015, Nikita Volkov
maintainer:         Nikita Volkov <nikita.y.volkov@mail.ru>
author:             Nikita Volkov <nikita.y.volkov@mail.ru>
homepage:           https://github.com/nikita-volkov/hasql-pool
bug-reports:        https://github.com/nikita-volkov/hasql-pool/issues
synopsis:           A pool of connections for Hasql
category:           Hasql, Database, PostgreSQL
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: git://github.com/nikita-volkov/hasql-pool.git

library
    exposed-modules:    Hasql.Pool
    hs-source-dirs:     library
    other-modules:      Hasql.Pool.Prelude
    default-language:   Haskell2010
    default-extensions:
        Arrows BangPatterns ConstraintKinds DataKinds DefaultSignatures
        DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric
        DeriveTraversable EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        PatternGuards ParallelListComp QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeFamilies TypeOperators
        UnboxedTuples

    build-depends:
        resource-pool >=0.2 && <0.3,
        hasql >=1.3 && <1.6,
        time >=1.5 && <2,
        base-prelude >=1 && <2,
        unliftio

test-suite test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
    default-extensions:
        Arrows BangPatterns ConstraintKinds DataKinds DefaultSignatures
        DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric
        DeriveTraversable EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        PatternGuards ParallelListComp QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeFamilies TypeOperators
        UnboxedTuples

    build-depends:
        base-prelude,
        hasql,
        hasql-pool,
        hspec >=2.6 && <3
