cabal-version:      3.0
name:               hasql-pool
version:            1.3.0.3.0.0.0.0.1
license:            MIT
license-file:       LICENSE
copyright:          (c) 2015, Nikita Volkov
maintainer:         Nikita Volkov <nikita.y.volkov@mail.ru>
author:             Nikita Volkov <nikita.y.volkov@mail.ru>
homepage:           https://github.com/nikita-volkov/hasql-pool
bug-reports:        https://github.com/nikita-volkov/hasql-pool/issues
synopsis:           Pool of connections for Hasql
category:           Hasql, Database, PostgreSQL
extra-source-files:
    CHANGELOG.md
    diagrams-output/*.png

extra-doc-files:    diagrams-output/*.png

source-repository head
    type:     git
    location: git://github.com/nikita-volkov/hasql-pool.git

library
    exposed-modules:
        Hasql.Pool
        Hasql.Pool.Config
        Hasql.Pool.Config.Defaults
        Hasql.Pool.Observation

    hs-source-dirs:     src/library/exposed src/library/other
    other-modules:
        Hasql.Pool.Config.Config
        Hasql.Pool.Config.Setting
        Hasql.Pool.Prelude
        Hasql.Pool.SessionErrorDestructors

    default-language:   Haskell2010
    default-extensions:
        ApplicativeDo Arrows BangPatterns BlockArguments ConstraintKinds
        DataKinds DefaultSignatures DeriveDataTypeable DeriveFoldable
        DeriveFunctor DeriveGeneric DeriveTraversable DerivingVia
        EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving
        ImportQualifiedPost LambdaCase LiberalTypeSynonyms
        MultiParamTypeClasses MultiWayIf NoImplicitPrelude
        NoMonomorphismRestriction NumericUnderscores OverloadedStrings
        PatternGuards QuasiQuotes RankNTypes RecordWildCards
        RoleAnnotations ScopedTypeVariables StandaloneDeriving StrictData
        TupleSections TypeApplications TypeFamilies TypeOperators

    build-depends:
        base >=4.11 && <5,
        bytestring >=0.10 && <0.14,
        hasql >=1.9 && <1.10,
        stm >=2.5 && <3,
        text >=1.2 && <3,
        time >=1.9 && <2,
        unliftio >=0.2.25 && <0.3,
        uuid >=1.3 && <2

test-suite test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     src/test
    default-language:   Haskell2010
    default-extensions:
        ApplicativeDo Arrows BangPatterns BlockArguments ConstraintKinds
        DataKinds DefaultSignatures DeriveDataTypeable DeriveFoldable
        DeriveFunctor DeriveGeneric DeriveTraversable DerivingVia
        EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving
        ImportQualifiedPost LambdaCase LiberalTypeSynonyms
        MultiParamTypeClasses MultiWayIf NoImplicitPrelude
        NoMonomorphismRestriction NumericUnderscores OverloadedStrings
        PatternGuards QuasiQuotes RankNTypes RecordWildCards
        RoleAnnotations ScopedTypeVariables StandaloneDeriving StrictData
        TupleSections TypeApplications TypeFamilies TypeOperators

    ghc-options:        -threaded
    build-depends:
        async >=2.2 && <3,
        hasql,
        hasql-pool,
        hspec >=2.6 && <3,
        random >=1.2 && <2,
        rerebase >=1.15 && <2
