cabal-version: 3.0
name:          hasql-th
version:       0.4.0.23.0.0.0.0.1
license:       MIT
license-file:  LICENSE
copyright:     (c) 2015, Nikita Volkov
maintainer:    Nikita Volkov <nikita.y.volkov@mail.ru>
author:        Nikita Volkov <nikita.y.volkov@mail.ru>
homepage:      https://github.com/nikita-volkov/hasql-th
bug-reports:   https://github.com/nikita-volkov/hasql-th/issues
synopsis:      Template Haskell utilities for Hasql
description:
    Extension-library for Hasql,
    bringing compile-time syntax checking,
    great simplification of declaration of statements and
    other TemplateHaskell-based utilities.

    For details please see <https://github.com/nikita-volkov/hasql-th the readme>.

category:      Hasql, Database, PostgreSQL, Template Haskell

source-repository head
    type:     git
    location: git://github.com/nikita-volkov/hasql-th.git

library
    exposed-modules:    Hasql.TH
    hs-source-dirs:     library
    other-modules:
        Hasql.TH.Construction.Exp
        Hasql.TH.Extraction.ChildExprList
        Hasql.TH.Extraction.Exp
        Hasql.TH.Extraction.InputTypeList
        Hasql.TH.Extraction.OutputTypeList
        Hasql.TH.Extraction.OutputHsTarget
        Hasql.TH.Extraction.PlaceholderTypeMap
        Hasql.TH.Extraction.PrimitiveType
        Hasql.TH.Prelude

    default-language:   Haskell2010
    default-extensions:
        ApplicativeDo Arrows BangPatterns ConstraintKinds DataKinds
        DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor
        DeriveGeneric DeriveTraversable DuplicateRecordFields
        EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        ParallelListComp PatternGuards QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeFamilies TypeOperators
        UnboxedTuples

    build-depends:
        base >=4.11 && <5,
        bytestring >=0.10 && <0.13,
        containers >=0.6 && <0.8,
        contravariant >=1.5.2 && <2,
        foldl >=1.4.5 && <2,
        hasql >=1.4 && <1.10,
        postgresql-syntax >=0.4.1 && <0.5,
        template-haskell >=2.8 && <3,
        template-haskell-compat-v0208 >=0.1.9 && <2,
        text >=1 && <3,
        uuid >=1.3 && <2,
        vector >=0.12 && <0.14,
        mtl >=2.3.1 && <2.5
