cabal-version: >=1.10
name:          hasql-transaction
version:       1.0.1.2.0.0.0.0.1
license:       MIT
license-file:  LICENSE
copyright:     (c) 2015, Nikita Volkov
maintainer:    Nikita Volkov <nikita.y.volkov@mail.ru>
author:        Nikita Volkov <nikita.y.volkov@mail.ru>
homepage:      https://github.com/nikita-volkov/hasql-transaction
bug-reports:   https://github.com/nikita-volkov/hasql-transaction/issues
synopsis:
    Composable abstraction over retryable transactions for Hasql

category:      Hasql, Database, PostgreSQL
build-type:    Simple

source-repository head
    type:     git
    location: git://github.com/nikita-volkov/hasql-transaction.git

library
    exposed-modules:
        Hasql.Transaction
        Hasql.Transaction.Sessions

    hs-source-dirs:     library
    other-modules:
        Hasql.Transaction.Config
        Hasql.Transaction.Private.Prelude
        Hasql.Transaction.Private.SQL
        Hasql.Transaction.Private.Statements
        Hasql.Transaction.Private.Sessions
        Hasql.Transaction.Private.Transaction

    default-language:   Haskell2010
    default-extensions:
        Arrows BangPatterns ConstraintKinds DataKinds DefaultSignatures
        DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric
        DeriveTraversable EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        PatternGuards ParallelListComp QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeFamilies TypeOperators
        UnboxedTuples

    build-depends:
        base >=4.12 && <5,
        bytestring >=0.10 && <0.13,
        bytestring-tree-builder >=0.2.7.8 && <0.3,
        contravariant >=1.3 && <2,
        contravariant-extras >=0.3 && <0.4,
        hasql >=1.6 && <1.7,
        mtl >=2.2 && <3,
        transformers >=0.5 && <0.7,
        random >1.2 && <1.3

test-suite conflicts-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     conflicts-test
    other-modules:
        Main.Statements
        Main.Transactions

    default-language:   Haskell2010
    default-extensions:
        Arrows BangPatterns ConstraintKinds DataKinds DefaultSignatures
        DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric
        DeriveTraversable EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        PatternGuards ParallelListComp QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeFamilies TypeOperators
        UnboxedTuples

    ghc-options:        -O2 -threaded -with-rtsopts=-N
    build-depends:
        contravariant-extras >=0.3 && <0.4,
        hasql-transaction,
        hasql,
        async >=2.1 && <3,
        rerebase >=1.11 && <2
